@@ -229,6 +229,7 @@ GS_PRIVATE_INTERNAL(NSXMLElement)
 - (void) insertChild: (NSXMLNode*)child atIndex: (NSUInteger)index
 {
   NSXMLNodeKind	kind;
+  xmlNodePtr node = (xmlNodePtr)(internal->node);
 
   NSAssert(nil != child, NSInvalidArgumentException);
   NSAssert(index <= internal->childCount, NSInvalidArgumentException);
@@ -321,42 +322,6 @@ GS_PRIVATE_INTERNAL(NSXMLElement)
 - (void) normalizeAdjacentTextNodesPreservingCDATA: (BOOL)preserve
 {
   [self notImplemented: _cmd];
-}
-
-- (NSString *) XMLStringWithOptions: (NSUInteger)options
-{
-  NSMutableString *result = [NSMutableString string];
-  NSEnumerator *en = nil;
-  id object = nil;
-
-  // XML Element open tag...
-  [result appendString: [NSString stringWithFormat: @"<%@",[self name]]];
-
-  // get the attributes...
-  en = [[self attributes] objectEnumerator];
-  while ((object = [en nextObject]) != nil)
-    {
-      [result appendString: @" "];
-      [result appendString: [object XMLStringWithOptions: options]];
-    }
-  // close the brackets...
-  [result appendString: @">"];
-
-  [result appendString: [self stringValue]]; // need to escape entities...
-
-  // Iterate over the children...
-  en = [[self children] objectEnumerator];
-  while ((object = [en nextObject]) != nil)
-    {
-      [result appendString: @" "];
-      [result appendString: [object XMLStringWithOptions: options]];
-    }
-  
-  // Close the entire tag...
-  [result appendString: [NSString stringWithFormat: @"</%@>",[self name]]];
-
-  // return 
-  return result;
 }
 
 - (id) copyWithZone: (NSZone *)zone
